learning-with-dl/dl-rules/src/main/java/org/semanticweb/drew/dlprogram/parser/DLProgramParser.java
/* Generated By:JavaCC: Do not edit this line. DLProgramParser.java */
package org.semanticweb.drew.dlprogram.parser;

import org.semanticweb.drew.default_logic.DefaultRule;
import org.semanticweb.drew.default_logic.OWLPredicate;
import org.semanticweb.drew.dlprogram.model.*;
import org.semanticweb.owlapi.apibinding.OWLManager;
import org.semanticweb.owlapi.model.*;

import java.sql.Types;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;

public class DLProgramParser implements DLProgramParserConstants {

    // namespace abbreviation to the full name
    Map< String, String> namespaces = new HashMap< String, String>();

    // fragments to object properties
    Map< String, OWLObjectProperty> objectProperties = new HashMap<String, OWLObjectProperty>();

    // fragments to object properties
    Map< String, OWLDataProperty> dataProperties = new HashMap<String, OWLDataProperty>();

    // fragments to classes
    Map< String, OWLClass> classes = new HashMap< String, OWLClass>();

    OWLOntology ontology;

    public void setOntology(OWLOntology ontology) {
        this.ontology = ontology;

        for (OWLObjectProperty op : ontology.getObjectPropertiesInSignature()) {
            IRI iri = op.getIRI();
            objectProperties.put(iri.getFragment(), op);
            objectProperties.put(iri.toString(), op);
        }

        for (OWLDataProperty op : ontology.getDataPropertiesInSignature()) {
            IRI iri = op.getIRI();
            dataProperties.put(iri.getFragment(), op);
            dataProperties.put(iri.toString(), op);
        }

        for (OWLClass cls : ontology.getClassesInSignature()) {
            IRI iri = cls.getIRI();
            classes.put(iri.getFragment(), cls);
            classes.put(iri.toString(), cls);
        }
    }

    private OWLLogicalEntity findLogicalEntity(String name) {
        if (classes.containsKey(name)) {
            return classes.get(name);
        } else if (objectProperties.containsKey(name)) {
            return objectProperties.get(name);
        } else if (dataProperties.containsKey(name)) {
            return dataProperties.get(name);
        } else {
            throw new IllegalArgumentException("No matched predicate from ontology: " + name);
        }
    }

    public void process() throws ParseException {
    }

    public void adjustDLInputOperationArity(DLProgram program) {
        for (DLInputSignature signature : program.getDLInputSignatures()) {
            for (DLInputOperation op : signature.getOperations()) {
                NormalPredicate inputPredicate = op.getInputPredicate();
                String name = inputPredicate.getName();
                int arity = CacheManager.getInstance().getArity(name);
                inputPredicate.setArity(arity);
            }
        }
    }

    final public String dlPredicate() throws ParseException {
        String name;
        if (jj_2_1(2147483647)) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case UPPER_LEADING_ID:
                    jj_consume_token(UPPER_LEADING_ID);
                    break;
                case LOWER_LEADING_ID:
                    jj_consume_token(LOWER_LEADING_ID);
                    break;
                default:
                    jj_la1[0] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            String key = token.image;
            String namespace = namespaces.get(key);
            jj_consume_token(COLON);
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case UPPER_LEADING_ID:
                    jj_consume_token(UPPER_LEADING_ID);
                    break;
                case LOWER_LEADING_ID:
                    jj_consume_token(LOWER_LEADING_ID);
                    break;
                default:
                    jj_la1[1] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            name = namespace + token.image;
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LOWER_LEADING_ID:
                case UPPER_LEADING_ID:
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case UPPER_LEADING_ID:
                            jj_consume_token(UPPER_LEADING_ID);
                            break;
                        case LOWER_LEADING_ID:
                            jj_consume_token(LOWER_LEADING_ID);
                            break;
                        default:
                            jj_la1[2] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                    name = token.image;
                    break;
                case STRING:
                    jj_consume_token(STRING);
                    name = token.image;
                    name = name.substring(1, name.length() - 1);
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {
            if (true)
                return name;
        }
        throw new Error("Missing return statement in function");
    }

    final public DLInputOperation dlInputOperation() throws ParseException {
        DLInputOperation op = new DLInputOperation();
        String name;
        name = dlPredicate();
        OWLLogicalEntity dlPredicate = findLogicalEntity(name);
        op.setDLPredicate(dlPredicate);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case UPLUS:
                jj_consume_token(UPLUS);
                op.setType(DLInputOperator.U_PLUS);
                break;
            case UMINUS:
                jj_consume_token(UMINUS);
                op.setType(DLInputOperator.U_MINUS);
                break;
            case CAPMINUS:
                jj_consume_token(CAPMINUS);
                op.setType(DLInputOperator.CAP_MINUS);
                break;
            default:
                jj_la1[4] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        name = dlPredicate();
        //The arity will be set later
        int arity = - 1;
        NormalPredicate predicate = CacheManager.getInstance().getPredicate(name, arity);
        op.setInputPredicate(predicate);
        {
            if (true)
                return op;
        }
        throw new Error("Missing return statement in function");
    }

    final public DLInputSignature dlInputSignature() throws ParseException {
        DLInputSignature signature = new DLInputSignature();
        DLInputOperation op;
        if (jj_2_3(4)) {
            if (jj_2_2(2)) {
                op = dlInputOperation();
                signature.getOperations().add(op);
                label_1:
                while (true) {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case CONJUNCTION:
            ;
                            break;
                        default:
                            jj_la1[5] = jj_gen;
                            break label_1;
                    }
                    jj_consume_token(CONJUNCTION);
                    op = dlInputOperation();
                    signature.getOperations().add(op);
                }
            } else {
                ;
            }
            jj_consume_token(32);
        } else {
            ;
        }
        {
            if (true)
                return signature;
        }
        throw new Error("Missing return statement in function");
    }

    final public DLAtomPredicate dlAtomPredicate() throws ParseException {
        DLAtomPredicate predicate = new DLAtomPredicate();
        DLInputSignature signature;
        String name;
        OWLLogicalEntity query;
        jj_consume_token(DL_ATOM);
        jj_consume_token(LEFT_SQUARE_BRACKET);
        signature = dlInputSignature();
        predicate.setInputSignature(signature);
        name = dlPredicate();
        query = findLogicalEntity(name);
        predicate.setQuery(query);
        jj_consume_token(RIGHT_SQUARE_BRACKET);
        {
            if (true)
                return predicate;
        }
        throw new Error("Missing return statement in function");
    }

    final public Constant constant() throws ParseException {
        String name;
        int type;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case INTEGER:
                jj_consume_token(INTEGER);
                name = token.image;
                type = Types.INTEGER;
                 {
                    if (true)
                        return CacheManager.getInstance().getConstant(name, type);
                }
                break;
            case DOUBLE:
                jj_consume_token(DOUBLE);
                name = token.image;
                type = Types.DOUBLE;
                 {
                    if (true)
                        return CacheManager.getInstance().getConstant(name, type);
                }
                break;
            case STRING:
                jj_consume_token(STRING);
                name = token.image.substring(1, token.image.length() - 1);
                type = Types.VARCHAR;
                 {
                    if (true)
                        return CacheManager.getInstance().getConstant(name, type);
                }
                break;
            case LOWER_LEADING_ID:
                jj_consume_token(LOWER_LEADING_ID);
                name = token.image;
                type = Types.VARCHAR;
                 {
                    if (true)
                        return CacheManager.getInstance().getConstant(name, type);
                }
                break;
            default:
                jj_la1[6] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }

        throw new Error("Missing return statement in function");
    }

    final public Term variable() throws ParseException {
        jj_consume_token(UPPER_LEADING_ID);
        {
            if (true)
                return CacheManager.getInstance().getVariable(token.image);
        }
        throw new Error("Missing return statement in function");
    }

    final public Functor functor() throws ParseException {
        Functor functor = new Functor();
        jj_consume_token(LOWER_LEADING_ID);
        functor.setName(token.image);
        {
            if (true)
                return functor;
        }
        throw new Error("Missing return statement in function");
    }

    final public Function function() throws ParseException {
        Function function = new Function();
        Functor functor;
        Term term;
        functor = functor();
        function.setFunctor(functor);
        jj_consume_token(LEFTBRACKET);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LOWER_LEADING_ID:
            case UPPER_LEADING_ID:
            case INTEGER:
            case DOUBLE:
            case STRING:
            case LEFTBRACKET:
                term = term();
                function.getTerms().add(term);
                label_2:
                while (true) {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case CONJUNCTION:
          ;
                            break;
                        default:
                            jj_la1[7] = jj_gen;
                            break label_2;
                    }
                    jj_consume_token(CONJUNCTION);
                    term = term();
                    function.getTerms().add(term);
                }
                break;
            default:
                jj_la1[8] = jj_gen;
                ;
        }
        jj_consume_token(RIGHTBRACKET);
        {
            if (true)
                return function;
        }
        throw new Error("Missing return statement in function");
    }

    final public Term unary() throws ParseException {
        Term term;
        if (jj_2_4(2147483647)) {
            term = function();
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LOWER_LEADING_ID:
                case INTEGER:
                case DOUBLE:
                case STRING:
                    term = constant();
                    break;
                case UPPER_LEADING_ID:
                    term = variable();
                    break;
                case LEFTBRACKET:
                    jj_consume_token(LEFTBRACKET);
                    term = additive();
                    jj_consume_token(RIGHTBRACKET);
                    break;
                default:
                    jj_la1[9] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {
            if (true)
                return term;
        }
        throw new Error("Missing return statement in function");
    }

    final public Term multiplicative() throws ParseException {
        Term left, right;
        Token token;
        left = unary();

        label_3:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case TIMES:
                case DIVIDE:
        ;
                    break;
                default:
                    jj_la1[10] = jj_gen;
                    break label_3;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case TIMES:
                    token = jj_consume_token(TIMES);
                    break;
                case DIVIDE:
                    token = jj_consume_token(DIVIDE);
                    break;
                default:
                    jj_la1[11] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            right = unary();
            Function function = new Function();
            Functor functor = new Functor();
            functor.setName(token.image);
            function.setFunctor(functor);
            function.getTerms().add(left);
            function.getTerms().add(right);
            left = function;
        }
        {
            if (true)
                return left;
        }
        throw new Error("Missing return statement in function");
    }

    final public Term additive() throws ParseException {
        Term left, right;
        Token token;
        left = multiplicative();

        label_4:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PLUS:
                case MINUS:
        ;
                    break;
                default:
                    jj_la1[12] = jj_gen;
                    break label_4;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PLUS:
                    token = jj_consume_token(PLUS);
                    break;
                case MINUS:
                    token = jj_consume_token(MINUS);
                    break;
                default:
                    jj_la1[13] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            right = multiplicative();
            Function function = new Function();
            Functor functor = new Functor();
            functor.setName(token.image);
            function.setFunctor(functor);
            function.getTerms().add(left);
            function.getTerms().add(right);
            left = function;
        }
        {
            if (true)
                return left;
        }
        throw new Error("Missing return statement in function");
    }

    final public Term term() throws ParseException {
        Term term;
        term = additive();
        {
            if (true)
                return term;
        }
        throw new Error("Missing return statement in function");
    }

    final synchronized public Literal literal() throws ParseException {
        Literal literal = new Literal();
        Predicate predicate = null;
        String name = null;
        Term term;
        int arity = 0;
        boolean isDLAtomPredicate = false;
        boolean neg = false;
        if (jj_2_5(2147483647)) {
            term = term();
            literal.getTerms().add(term);
            jj_consume_token(COMPARISON);
            predicate = CacheManager.getInstance().getPredicate(token.image, 2);
            literal.setPredicate(predicate);
            term = term();
            literal.getTerms().add(term);
            {
                if (true)
                    return literal;
            }
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case DL_ATOM:
                case HASH_LEADING_ID:
                case LOWER_LEADING_ID:
                case UPPER_LEADING_ID:
                case MINUS:
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case DL_ATOM:
                            predicate = dlAtomPredicate();
                            isDLAtomPredicate = true;
                            break;
                        case HASH_LEADING_ID:
                        case LOWER_LEADING_ID:
                        case UPPER_LEADING_ID:
                        case MINUS:
                            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                                case MINUS:
                                    jj_consume_token(MINUS);
                                    neg = true;
                                    break;
                                default:
                                    jj_la1[14] = jj_gen;
                                    ;
                            }
                            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                                case HASH_LEADING_ID:
                                    jj_consume_token(HASH_LEADING_ID);
                                    break;
                                case LOWER_LEADING_ID:
                                    jj_consume_token(LOWER_LEADING_ID);
                                    break;
                                case UPPER_LEADING_ID:
                                    jj_consume_token(UPPER_LEADING_ID);
                                    break;
                                default:
                                    jj_la1[15] = jj_gen;
                                    jj_consume_token(-1);
                                    throw new ParseException();
                            }
                            name = token.image;
                            if (neg) {
                                literal.setNegative(true);
                            }
                            break;
                        default:
                            jj_la1[16] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case LEFTBRACKET:
                            jj_consume_token(LEFTBRACKET);
                            term = term();
                            literal.getTerms().add(term);
                            arity++;
                            label_5:
                            while (true) {
                                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                                    case CONJUNCTION:
              ;
                                        break;
                                    default:
                                        jj_la1[17] = jj_gen;
                                        break label_5;
                                }
                                jj_consume_token(CONJUNCTION);
                                term = term();
                                literal.getTerms().add(term);
                                arity++;
                            }
                            jj_consume_token(RIGHTBRACKET);
                            break;
                        default:
                            jj_la1[18] = jj_gen;
                            ;
                    }
                    if (!isDLAtomPredicate) {
                        predicate = CacheManager.getInstance().getPredicate(name, arity);
                    } else {
                        predicate.setArity(arity);
                    }
                    literal.setPredicate(predicate);
                     {
                        if (true)
                            return literal;
                    }
                    break;
                default:
                    jj_la1[19] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        throw new Error("Missing return statement in function");
    }
